chore: fix align bug

--- a/src/renderer/style.scss
+++ b/src/renderer/style.scss
@@ -114,6 +114,7 @@
 
         & > #window-name, > #window-icon{
             justify-self: left;
+            align-self: center;
         }
 
         & > #window-icon {
